Changes since 0.3:

Accept the SQL 2003 syntax for an identity column:
    a INTEGER GENERATED BY DEFAULT AS IDENTITY[(STARTS WITH value)]
Support two variants of this functionality:
* An identity column is enabled by the SQL 2003 syntax.  It is based on
a sequence (that is, the value to be inserted by default is not affected
by other insert statements into the table).
* An auto-increment column is enabled by the AUTO_INCREMENT syntax.
It is based on the existing values (that is, inserting another value
into the table will change the value to be inserted).
Older versions of Mayfly had only identity columns.

Changes from 0.2 to 0.3:

Accept the MySQL syntax:
    INSERT INTO table SET col = value, col2 = value2, ...
Although this syntax is supported by no/few databases other than
MySQL, and it is merely a convenience, Mayfly does provide it,
simply because the standard syntax
    INSERT INTO table(col, col2) VALUES(value, value2)
can be really hard to read if there are more than a few columns.

New method in Database to set table names to case sensitive.

Accept the MySQL index syntax:
    CREATE TABLE(a INTEGER, INDEX(a))
as a noop.

Mayfly now supports many subselects, for example:
    select name from foo where x = (select max(y) from bar)
    select name from foo where x in (select y from bar)

The new SqlDumper class can dump a database as an SQL script.

Now can insert hex literals into BLOB columns, for example:
INSERT INTO foo(a) VALUES(x'aa65fe')

Some CASE statements now work.

Added LIKE, <=, and >= conditions.

Column aliases (SELECT foo as bar FROM) now work for the simple
cases.

Most methods in Database now throw runtime exceptions instead
of checked exceptions.  If you are of the checked exception
persuasion, or you have some piece of code which expects 
an SQLException, just call MayflyException#asSqlException. 
JDBC methods, of course, continue to throw SQLException

Many forms of ALTER TABLE now work.
