@@ -1,5 +1,13 @@
 Changes since 0.3:
 
+ALTER TABLE can now control the position of the added column,
+using the same syntax as MySQL:
+  ALTER TABLE ADD COLUMN B INTEGER AFTER A
+  ALTER TABLE ADD COLUMN A INTEGER FIRST
+  
+The dumper can now optionally omit the next value for auto-increment
+or identity columns.
+
 Accept the SQL 2003 syntax for an identity column:
     a INTEGER GENERATED BY DEFAULT AS IDENTITY[(STARTS WITH value)]
 Support two variants of this functionality:
